navbar fix, guitar image hide on mobile

--- a/kitster/kits/static/kits/main.css
+++ b/kitster/kits/static/kits/main.css
@@ -115,10 +115,10 @@ nav > a {
 	line-height: 1;
 }
 
-nav:hover {
+/* nav:hover {
 	background-color: #E8E2FF;
 	color: #7745D9 !important;
-}
+} */
 
 nav:hover > a {
 	background-color: #E8E2FF;
